--- a/templates/Chemical_Disease.html
+++ b/templates/Chemical_Disease.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Services - Sailor Bootstrap Template</title>
+  <title>BRET-Chemical_Disease</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
