suhyune upload main image

--- a/templates/index.html
+++ b/templates/index.html
@@ -77,7 +77,7 @@
       <div class="carousel-inner" role="listbox">
 
         <!-- Slide 1 -->
-        <div class="carousel-item active" style="background-image: url(static/img/slide/slide-1.jpg)">
+        <div class="carousel-item active" style="background-image: url(static/img/slide/back.png)">
           <div class="carousel-container">
             <div class="container">
               <h2 class="animate__animated animate__fadeInDown">A Relation Extraction Tool for Biomedical Text Mining</h2>
