--- a/templates/Chemical_Disease.html
+++ b/templates/Chemical_Disease.html
@@ -86,14 +86,21 @@
     </section><!-- End Breadcrumbs -->
 
     <!-- ======= Services Section ======= -->
-    <section id="services" class="services">
+
+    <!-- ====== File upload ===== -->
+    <section id="fileupload" class="fileupload">
       <div class="container">
-        <form action = "" method = "POST" enctype = "multipart/form-data">
-          <input type = "file" name = "file" />
-          <input type = "upload" />
-        </form>
+        <div class="d-flex justify-content-between align-items-center">
+          <form action="http://localhost:5000//Drug_Drug.html" method="post" enctype="multipart/form-data">
+            Select file to upload:
+            <input type="file" name="fileToUpload" id="fileToUpload" >
+            <input type="submit" value="Upload file" name="submit" class="btn btn-danger" >
+
+          </form>
       </div>
-    </section><!-- End Services Section -->
+        </div>
+    </section>
+    <!-- End File upload -->
 
     <!-- extraction result -->
     <section id="result" class="result">
