--- a/templates/index.html
+++ b/templates/index.html
@@ -87,8 +87,7 @@
 
         <div class="row content">
           <div class="col-lg-6">
-            <h2></h2>
-            <h3>model image</h3>
+            <img class="archi-img" src="static/img/slide/architecture.png">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
             <p>
