--- a/static/css/style.css
+++ b/static/css/style.css
@@ -642,6 +642,12 @@ section {
   font-size: 24px;
 }
 
+.about .content p {
+  font-size: 20px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
 .about .content ul {
   list-style: none;
   padding: 0;
@@ -658,10 +664,16 @@ section {
   position: absolute;
   font-size: 20px;
   color: #d9232d;
+
 }
 
 .about .content p:last-child {
   margin-bottom: 0;
+}
+
+.about .archi-img {
+  width: 100%;
+  height: 100%;
 }
 
 /*--------------------------------------------------------------
