--- a/static/css/style.css
+++ b/static/css/style.css
@@ -672,8 +672,8 @@ section {
 }
 
 .about .archi-img {
-  width: 100%;
-  height: 100%;
+  width: 532px;
+  height: 266px;
 }
 
 /*--------------------------------------------------------------
