--- a/templates/Chemical_Disease.html
+++ b/templates/Chemical_Disease.html
@@ -103,7 +103,10 @@
           </form>
       </div>
         <div> &nbsp; </div>
-        <button type="button" class="btn btn-danger">Download</button>
+        
+      <a href = "static/result/ChemDis_result.txt" download = "Chemicla_Disease Relation Extraction Result.txt"><button type=button class="btn btn-danger">Download</button></a>
+
+        
         <button type="button" class="btn btn-danger">About labels</button>
         <p>
           <textarea cols="120" rows="10" readonly="readonly">&nbsp;{{model_result}}&nbsp;</textarea>
