--- a/templates/Chemical_Disease.html
+++ b/templates/Chemical_Disease.html
@@ -6,6 +6,26 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>BRET-Chemical_Disease</title>
+  <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+  <script type="text/javascript">
+    jQuery(document).ready(function() {
+
+        jQuery("#displayDiv").hide();
+        jQuery("#btn").click(function() {
+
+            if(jQuery("#displayDiv").css("display") == "none") {
+
+                jQuery("#displayDiv").slideDown();
+            }
+
+            else {
+
+                jQuery("#displayDiv").slideUp();
+            }
+        });
+    });
+  </script>
+
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
@@ -107,7 +127,10 @@
       <a href = "static/result/ChemDis_result.txt" download = "Chemicla_Disease Relation Extraction Result.txt"><button type=button class="btn btn-danger">Download</button></a>
 
         
-        <button type="button" class="btn btn-danger">About labels</button>
+        <button type="button" id="btn" class="btn btn-danger">About labels</button>
+        <div id="displayDiv">
+          <img src="static/img/slide/chemprot_label.png">
+        </div>
         <p>
           <textarea cols="120" rows="10" readonly="readonly">&nbsp;{{model_result}}&nbsp;</textarea>
 
