--- a/templates/index.html
+++ b/templates/index.html
@@ -73,6 +73,7 @@
     <div class="carousel-container">
       <div class="container">
         <h2 class="animate__animated animate__fadeInDown">A Relation Extraction Tool for Biomedical Text Mining</h2>
+        <p class="animate__animated animate__fadeInUp">Sohyeun Bae, Suhyune Son, Seonjeong Hwang, Soo Jun Park, and Jang-Hwan Choi</p>
         <p class="animate__animated animate__fadeInUp">We propose a relation extraction tool for biomedical text mining. This tool extracts relations between entities tagged on biomedical texts and also provides the result files you can download.</p>
         <!-- <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a> -->
       </div>
@@ -118,20 +119,14 @@ used to train our model with main task:RE.
 
           <div class="col-lg-3 col-md-6">
             <div class="footer-info">
-              <h3>Sailor</h3>
+              <h3>Medical AI LAB @ EWHA</h3>
               <p>
-                A108 Adam Street <br>
-                NY 535022, USA<br><br>
-                <strong>Phone:</strong> +1 5589 55488 55<br>
-                <strong>Email:</strong> info@example.com<br>
+                Collaborative Research Building<br>
+                52, Ewhayeodae-gil, Seodaemun-gu, Seoul<br>
+                Republic of Korea 03760<br><br>
+                <strong>Phone:</strong> +82 2 3277 6945<br>
+                <strong>Email:</strong> choij@ewha.ac.kr<br>
               </p>
-              <div class="social-links mt-3">
-                <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-                <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-                <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-                <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-                <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-              </div>
             </div>
           </div>
 
