--- a/templates/contact.html
+++ b/templates/contact.html
@@ -91,67 +91,63 @@
       <div class="container">
 
         <div>
-          <iframe style="border:0; width: 100%; height: 270px;" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" allowfullscreen></iframe>
+          <iframe style="border:0; width: 100%; height: 270px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3162.683311801495!2d126.94394029483567!3d37.562524391687255!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357c988459902d69%3A0xf2536b3850f9d80d!2z7J207ZmU7Jes7J6Q64yA7ZWZ6rWQ!5e0!3m2!1sko!2skr!4v1599533926153!5m2!1sko!2skr"></iframe> </iframe>
         </div>
 
         <div class="row mt-5">
 
-          <div class="col-lg-4">
+          <div class="col-xs-1">
+            <div class="info">
+              <div class="logo">
+                <div class="lab-logo">
+                  <a href="http://jchoi315.cafe24.com/">
+                    <img src="static/img/team/AIBILAB_LOGO1.png"></img>
+                  </a>
+                </div>
+                <div class="school-logo">
+                  <a href="http://www.ewha.ac.kr/ewha/index.do">
+                    <div class="school-imgs">
+                      <img src="static/img/team/EWHA_LOGO2.png"></img>
+                      <br>
+                      <img src="static/img/team/EWHA_LOGO1.png"></img>
+                    </div>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-xs-1">
             <div class="info">
               <div class="address">
                 <i class="icofont-google-map"></i>
                 <h4>Location:</h4>
-                <p>A108 Adam Street, New York, NY 535022</p>
+                <p>Collaborative Research Building<br>
+                  52, Ewhayeodae-gil, Seodaemun-gu, Seoul<br>
+                  Republic of Korea 03760</p>
               </div>
+            </div>
+          </div>
 
+          <div class="col-xs-1">
+            <div class="info">
               <div class="email">
                 <i class="icofont-envelope"></i>
                 <h4>Email:</h4>
-                <p>info@example.com</p>
+                <p>choij@ewha.ac.kr</p>
               </div>
+            </div>
+          </div>
 
+          <div class="col-xs-1">
+            <div class="info">
               <div class="phone">
                 <i class="icofont-phone"></i>
                 <h4>Call:</h4>
-                <p>+1 5589 55488 55s</p>
+                <p>+82 2 3277 6945</p>
               </div>
-
             </div>
-
           </div>
-
-          <div class="col-lg-8 mt-5 mt-lg-0">
-
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
-              <div class="form-row">
-                <div class="col-md-6 form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
-                  <div class="validate"></div>
-                </div>
-                <div class="col-md-6 form-group">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
-                  <div class="validate"></div>
-                </div>
-              </div>
-              <div class="form-group">
-                <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
-                <div class="validate"></div>
-              </div>
-              <div class="form-group">
-                <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
-                <div class="validate"></div>
-              </div>
-              <div class="mb-3">
-                <div class="loading">Loading</div>
-                <div class="error-message"></div>
-                <div class="sent-message">Your message has been sent. Thank you!</div>
-              </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
-            </form>
-
-          </div>
-
-        </div>
 
       </div>
     </section><!-- End Contact Section -->
@@ -166,20 +162,14 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="footer-info">
-              <h3>Sailor</h3>
+              <h3>Medical AI LAB @ EWHA</h3>
               <p>
-                A108 Adam Street <br>
-                NY 535022, USA<br><br>
-                <strong>Phone:</strong> +1 5589 55488 55<br>
-                <strong>Email:</strong> info@example.com<br>
+                Collaborative Research Building<br>
+                52, Ewhayeodae-gil, Seodaemun-gu, Seoul<br>
+                Republic of Korea 03760<br><br>
+                <strong>Phone:</strong> +82 2 3277 6945<br>
+                <strong>Email:</strong> choij@ewha.ac.kr<br>
               </p>
-              <div class="social-links mt-3">
-                <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-                <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-                <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-                <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-                <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-              </div>
             </div>
           </div>
 
