--- a/templates/Chemical_Disease.html
+++ b/templates/Chemical_Disease.html
@@ -159,45 +159,39 @@
           <div class="col-lg-3 col-md-6">
             <div class="footer-info">
               <h3>Medical AI LAB @ EWHA</h3>
+              <strong>Phone:</strong> +82 2 3277 6945<br>
+              <strong>Email:</strong> choij@ewha.ac.kr<br>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6">
+            <div class="footer-info-contact">
               <p>
                 Collaborative Research Building<br>
                 52, Ewhayeodae-gil, Seodaemun-gu, Seoul<br>
                 Republic of Korea 03760<br><br>
-                <strong>Phone:</strong> +82 2 3277 6945<br>
-                <strong>Email:</strong> choij@ewha.ac.kr<br>
               </p>
             </div>
           </div>
 
-          <div class="col-lg-2 col-md-6 footer-links">
-            <h4>Useful Links</h4>
-            <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
-            </ul>
+          <div class="col-lg-3 col-md-6 footer-links">
+            <div class="footer-menu">
+              <h4>Menu</h4>
+              <ul>
+                <li><i class="bx bx-chevron-right"></i> <a href="index.html">Home</a></li>
+                <li><i class="bx bx-chevron-right"></i> <a href="contact.html">Contact</a></li>
+              </ul>
+            </div>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Our Services</h4>
-            <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
-            </ul>
-          </div>
-
-          <div class="col-lg-4 col-md-6 footer-newsletter">
-            <h4>Our Newsletter</h4>
-            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
-            <form action="" method="post">
-              <input type="email" name="email"><input type="submit" value="Subscribe">
-            </form>
-
+            <div class="footer-menu">
+              <ul>
+                <li><i class="bx bx-chevron-right"></i> <a href="Chemical_Disease.html">Chemical-Disease</a></li>
+                <li><i class="bx bx-chevron-right"></i> <a href="Drug_Drug.html">Drug-Drug</a></li>
+                <li><i class="bx bx-chevron-right"></i> <a href="Gene_Disease.html">Gene-Disease</a></li>
+              </ul>
+            </div>
           </div>
 
         </div>
