--- a/templates/contact.html
+++ b/templates/contact.html
@@ -43,22 +43,22 @@
   <header id="header" class="fixed-top header-inner-pages">
     <div class="container d-flex align-items-center">
 
-      <h1 class="logo"><a href="index.html">BRET</a></h1>
+      <h1 class="logo"><a href="/">BRET</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
       <nav class="nav-menu d-none d-lg-block">
 
         <ul>
-          <li><a href="index.html">Home</a></li>
+          <li><a href="/">Home</a></li>
 
           
 
-          <li><a href="Chemical_Disease.html">Chemical-Disease</a></li>
-          <li><a href="Drug_Drug.html">Drug-Drug</a></li>
-          <li><a href="Gene_Disease.html">Gene-Disease</a></li>
+          <li><a href="/Chemical-Disease">Chemical-Disease</a></li>
+          <li><a href="/Drug-Drug">Drug-Drug</a></li>
+          <li><a href="/Gene-Disease">Gene-Disease</a></li>
           
-          <li class="active"><a href="contact.html">Contact</a></li>
+          <li class="active"><a href="/contact">Contact</a></li>
 
         </ul>
 
@@ -78,7 +78,7 @@
         <div class="d-flex justify-content-between align-items-center">
           <h2>Contact</h2>
           <ol>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="/">Home</a></li>
             <li>Contact</li>
           </ol>
         </div>
