modify url path

--- a/templates/index.html
+++ b/templates/index.html
@@ -42,22 +42,22 @@
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center">
 
-      <h1 class="logo"><a href="index.html">BRET</a></h1>
+      <h1 class="logo"><a href="/">BRET</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="static/img/logo.png" alt="" class="img-fluid"></a>-->
 
       <nav class="nav-menu d-none d-lg-block">
 
         <ul>
-          <li class="active"><a href="index.html">Home</a></li>
+          <li class="active"><a href="/">Home</a></li>
 
           
 
-          <li><a href="Chemical_Disease.html">Chemical-Disease</a></li>
-          <li><a href="Drug_Drug.html">Drug-Drug</a></li>
-          <li><a href="Gene_Disease.html">Gene-Disease</a></li>
+          <li><a href="/Chemical-Disease">Chemical-Disease</a></li>
+          <li><a href="/Drug-Drug">Drug-Drug</a></li>
+          <li><a href="/Gene-Disease">Gene-Disease</a></li>
           
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="/contact">Contact</a></li>
 
         </ul>
 
@@ -139,7 +139,7 @@ used to train our model with main task:RE.
             <div class="footer-menu">
               <h4>Menu</h4>
               <ul>
-                <li><i class="bx bx-chevron-right"></i> <a href="index.html">Home</a></li>
+                <li><i class="bx bx-chevron-right"></i> <a href="/">Home</a></li>
                 <li><i class="bx bx-chevron-right"></i> <a href="contact.html">Contact</a></li>
               </ul>
             </div>
