--- a/templates/Chemical_Disease.html
+++ b/templates/Chemical_Disease.html
@@ -69,15 +69,15 @@
       <nav class="nav-menu d-none d-lg-block">
 
         <ul>
-          <li><a href="index.html">Home</a></li>
+          <li><a href="/">Home</a></li>
 
           
 
-          <li class="active"><a href="Chemical_Disease.html">Chemical-Disease</a></li>
-          <li><a href="Drug_Drug.html">Drug-Drug</a></li>
-          <li><a href="Gene_Disease.html">Gene-Disease</a></li>
+          <li class="active"><a href="/Chemical-Disease">Chemical-Disease</a></li>
+          <li><a href="/Drug-Drug">Drug-Drug</a></li>
+          <li><a href="/Gene-Disease">Gene-Disease</a></li>
           
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="/contact">Contact</a></li>
 
         </ul>
 
@@ -97,7 +97,7 @@
         <div class="d-flex justify-content-between align-items-center">
           <h2>Chemical-Disease Relation Extraction</h2>
           <ol>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="/">Home</a></li>
             <li>Chemical-Disease</li>
           </ol>
         </div>
@@ -115,7 +115,7 @@
         <div> &nbsp; </div>
         <div class="d-flex justify-content-between align-items-center">
 
-          <form action="http://localhost:5000//Chemical_Disease.html" method="post" enctype="multipart/form-data">
+          <form action="http://localhost:5000/Chemical-Disease.html" method="post" enctype="multipart/form-data">
             Select file to upload:
             <input type="file" name="fileToUpload" id="fileToUpload" >
             <input type="submit" value="Upload file" name="submit" class="btn btn-danger" >
