서버내용 반영

--- a/templates/Chemical_Disease.html
+++ b/templates/Chemical_Disease.html
@@ -62,7 +62,7 @@
   <header id="header" class="fixed-top header-inner-pages">
     <div class="container d-flex align-items-center">
 
-      <h1 class="logo"><a href="index.html">BRET</a></h1>
+      <h1 class="logo"><a href="/">BRET</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="static/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -115,7 +115,7 @@
         <div> &nbsp; </div>
         <div class="d-flex justify-content-between align-items-center">
 
-          <form action="http://localhost:5000/Chemical-Disease.html" method="post" enctype="multipart/form-data">
+          <form action="http://203.255.176.237:5000/Chemical-Disease" method="post" enctype="multipart/form-data">
             Select file to upload:
             <input type="file" name="fileToUpload" id="fileToUpload" >
             <input type="submit" value="Upload file" name="submit" class="btn btn-danger" >
